<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autorace_real_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hj-235786@rwu.de">hrushikesh</maintainer>
  <license>TODO: License declaration</license>

   <!-- Build tool -->
   <buildtool_depend>ament_cmake</buildtool_depend>

   <!-- Dependencies required to generate interfaces -->
   <build_depend>rosidl_default_generators</build_depend>
   <build_depend>action_msgs</build_depend>
 
   <!-- Runtime dependencies to find interfaces -->
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>action_msgs</exec_depend>
 
   <!-- Testing dependencies -->
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
